# trap_geometry

./: .gitignore  CMakeLists.txt  hoa-geometry.py  mesh_electrodes.cpp
dataOutput/: ElectrodesToMesh.txt  SVGtoElectrodesOutput.txt  SVGtoExtraOutput.txt
output/: ElectrodesToMesh.txt  SVGtoExtra.txt
